upgraded i18next to 25.0.0

--- a/src/locale/ja.json
+++ b/src/locale/ja.json
@@ -32,11 +32,11 @@
     "NoNotes": "メモなし",
     "OpenInArmory": "アーマリーで見る",
     "Season": "{{year}} 年目、シーズン {{season}}",
-    "TrashlistedRolls": "トラッシュリストのロール",
-    "TrashlistedRolls_plural": "{{count, number}} 個のウイッシュリストのロール",
+    "TrashlistedRolls_one": "トラッシュリストのロール",
+    "TrashlistedRolls_other": "{{count, number}} 個のウイッシュリストのロール",
     "Unknown": "不明のアイテム",
-    "WishlistedRolls": "ウイッシュリストのロール",
-    "WishlistedRolls_plural": "{{count, number}} 個のウイッシュリストのロール",
+    "WishlistedRolls_one": "ウイッシュリストのロール",
+    "WishlistedRolls_other": "{{count, number}} 個のウイッシュリストのロール",
     "YourItems": "あなたのアイテム"
   },
   "Browsercheck": {
@@ -62,8 +62,8 @@
     "Confirm": "メモを更新",
     "Remove": "メモ削除 / #hashtag 削除",
     "Replace": "メモを置き換える",
-    "Title": "アイテムのメモを変更する",
-    "Title_plural": "{{count}} 個のアイテムのメモをまとめて変更する"
+    "Title_one": "アイテムのメモを変更する",
+    "Title_other": "{{count}} 個のアイテムのメモをまとめて変更する"
   },
   "BungieAlert": {
     "Title": "Bungieからメッセージが届いています。"
@@ -113,17 +113,17 @@
     "Super": "スーパースキルのクールダウン: {{cooldown}}"
   },
   "Countdown": {
-    "Days": "1日",
-    "Days_compact": "{{count}}日",
-    "Days_compact_plural": "{{count}}日間",
-    "Days_plural": "{{count}}日間"
+    "Days_compact_one": "{{count}}日",
+    "Days_compact_other": "{{count}}日間",
+    "Days_one": "1日",
+    "Days_other": "{{count}}日間"
   },
   "Csv": {
     "EmptyFile": "ファイルにラインがありませんでした。",
     "ImportConfirm": "タグ/メモを CSV からインポートするよろしいですか。タグ/メモ スプレッドシートに含まれているすべてのアイテムが上書きされます。",
     "ImportFailed": "タグ/メモを CSV からインポートに失敗しました: {{error}}",
-    "ImportSuccess": "タグ/メモは、1 つの項目に読み込まれます。",
-    "ImportSuccess_plural": "{{count}} アイテムのタグ/メモが読み込まれます。",
+    "ImportSuccess_one": "タグ/メモは、1 つの項目に読み込まれます。",
+    "ImportSuccess_other": "{{count}} アイテムのタグ/メモが読み込まれます。",
     "ImportWrongFileType": "CSV ファイルではありません。",
     "WrongFields": "CSVには「Id」、「Notes」、「Tag」、および「Hash」の列が必要です"
   },
@@ -149,18 +149,18 @@
     "Troubleshooting": "トラブルシューティングガイド"
   },
   "FarmingMode": {
-    "D2Desc": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_female": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_female_plural": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_male": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_male_plural": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_plural": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "Desc": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに1つの空き容量を保持して、ポストマスターへの移動を防ぎます。",
-    "Desc_female": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに1つの空き容量を保持して、ポストマスターへの移動を防ぎます。",
-    "Desc_female_plural": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
-    "Desc_male": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに空き容量を保持して、ポストマスターへの移動を防ぎます。",
-    "Desc_male_plural": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
-    "Desc_plural": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
+    "D2Desc_female_one": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "D2Desc_female_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "D2Desc_male_one": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "D2Desc_male_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "D2Desc_one": "DIMは、 {{store}} のアイテムタイプごとに空白が常に1つあることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "D2Desc_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "Desc_female_one": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに1つの空き容量を保持して、ポストマスターへの移動を防ぎます。",
+    "Desc_female_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
+    "Desc_male_one": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに空き容量を保持して、ポストマスターへの移動を防ぎます。",
+    "Desc_male_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
+    "Desc_one": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに1つの空き容量を保持して、ポストマスターへの移動を防ぎます。",
+    "Desc_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへの移動を防ぎます。",
     "FarmingMode": "ファーミングモード",
     "FarmingModeNote": "(ドロップのためのスペースを確保)",
     "MakeRoom": {
@@ -204,12 +204,12 @@
     "ArmorIntrinsic": "戦略的アーマーの様な、固有のパークを持つレジェンダリアーマーを表示。",
     "Ascended": "上昇した上昇ノードを持つアイテムを表示。",
     "Breaker": "チャンピオンを怯ませる武器タイプでフィルタリングします。breaker:instrinsicは、内在特性で怯ませる能力を持つアイテムを表示します。",
-    "BulkClear": "1個のアイテムからタグを削除",
-    "BulkClear_plural": "{{count}} 個のアイテムからタグを削除",
-    "BulkRevert": "1個のアイテムのタグを元に戻しました",
-    "BulkRevert_plural": "{{count}} 個のアイテムのタグを元に戻しました",
-    "BulkTag": "選択したアイテムを{{tag}} としてタグ付けしました。",
-    "BulkTag_plural": "選択した{{count}} 個のアイテムに{{tag}} のタグを付けました。",
+    "BulkClear_one": "1個のアイテムからタグを削除",
+    "BulkClear_other": "{{count}} 個のアイテムからタグを削除",
+    "BulkRevert_one": "1個のアイテムのタグを元に戻しました",
+    "BulkRevert_other": "{{count}} 個のアイテムのタグを元に戻しました",
+    "BulkTag_one": "選択したアイテムを{{tag}} としてタグ付けしました。",
+    "BulkTag_other": "選択した{{count}} 個のアイテムに{{tag}} のタグを付けました。",
     "Catalyst": "媒体をステータスに応じて表示します。catalyst:completeは、挑戦を完了し適用済の媒体を表示します。catalyst:incompleteは、媒体は入手済ですが、目標を達成していないか、媒体を適用していないものを表示します。catalyst:missing は、媒体を適用できる可能性があるものの、まだ媒体を見つけていないアイテムを表示します。",
     "Class": "クラス別にアイテムを表示",
     "Combine": "フィルターは、{{example}} のように、括弧や「or」「and」で組み合わせたり、グループ化することでアイテムを絞り込めます。",
@@ -379,8 +379,8 @@
     "FilterHelpOptimizer": "ロードアウトに使いたい防具をフィルターで絞り込みます: {{example}}",
     "FilterHelpProgress": "マイルストーンとバウンティーを検索",
     "FilterHelpRecords": "勝利の道のりとコレクションを検索する",
-    "FilterMatchCount": "1つのアイテム",
-    "FilterMatchCount_plural": "{{count}} アイテム",
+    "FilterMatchCount_one": "1つのアイテム",
+    "FilterMatchCount_other": "{{count}} アイテム",
     "Filters": "フィルター",
     "InstallDIM": "アプリとしてインストールする",
     "InstallDIMBanner": "DIM をホーム画面のアプリとしてインストール",
@@ -799,8 +799,8 @@
     "InGameLoadouts": "ゲーム内ロードアウト",
     "IncludeRuntimeStatBenefits": "Mod「～の泉」の反映後の数値としてカウントする",
     "IncludeRuntimeStatBenefitsDesc": "アーマーMod「～の泉」は、アーマーチャージの間はキャラクターのステータスを一律に上昇させます。\nこの設定を有効にすると、DIMはこれらのModがアクティブの状態での数値を、ロードアウト最適化のステータス値として計算し反映させます。",
-    "ItemErrorSummary": "1 つのアイテムエラー:",
-    "ItemErrorSummary_plural": "{{count}} 個のアイテムでエラー:",
+    "ItemErrorSummary_one": "1 つのアイテムエラー:",
+    "ItemErrorSummary_other": "{{count}} 個のアイテムでエラー:",
     "ItemLeveling": "アイテムのレベルアップ",
     "LoadoutName": "ロードアウトの名前...",
     "LoadoutParameters": "ロードアウト最適化の設定",
@@ -809,12 +809,12 @@
     "LoadoutParametersStats": "ステータス値の優先順位と最小/最大ステータス値Tier",
     "Loadouts": "ロードアウト",
     "MakeRoom": "ポストマスターのための部屋を作る",
-    "MakeRoomDone": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_female": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_female_plural": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_male": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_male_plural": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_plural": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_female_one": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_female_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_male_one": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_male_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_one": "1つのアイテムを{{store}} から移動して、1つのポストマスターアイテム用のスペースを作成しました。",
+    "MakeRoomDone_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
     "MakeRoomError": "ポストマスターの全アイテム用のスペースを確保できませんでした: {{error}} 。",
     "ManageLoadouts": "ロードアウトの管理",
     "MaxSlots": "ロードアウトには {{slots}} {{bucketName}} しかありません。",
@@ -822,17 +822,17 @@
     "MaximizePower": "最大パワー",
     "MaximizeStat": "統計を最大化する",
     "MissingItemsWarning": "このロードアウトに含まれるアイテムの一部は保管庫に存在しません。",
-    "ModErrorSummary": "1個のmodエラー",
-    "ModErrorSummary_plural": "{{count}} 個のmod エラー:",
+    "ModErrorSummary_one": "1個のmodエラー",
+    "ModErrorSummary_other": "{{count}} 個のmod エラー:",
     "ModPlacement": {
       "InvalidMods": "無効な mod",
-      "InvalidModsDesc": "どのアーマーにも適用できないmodが1つ見つかりました。",
-      "InvalidModsDesc_plural": "どのアーマーにも適用できないmodが {{count}} 個見つかりました。",
+      "InvalidModsDesc_one": "どのアーマーにも適用できないmodが1つ見つかりました。",
+      "InvalidModsDesc_other": "どのアーマーにも適用できないmodが {{count}} 個見つかりました。",
       "ModPlacement": "Mod を入れ替え",
       "StackableMod": "スタック可能",
       "UnassignedMods": "割り当てられていない mod",
-      "UnassignedModsDesc": "エネルギー容量または mod スロットが不足しているため、1つの mod を適用できませんでした。選択している防具のエネルギーアップグレードでは、この問題は解決しません。",
-      "UnassignedModsDesc_plural": "エネルギー容量またはMODスロットが不足しているため、 {{count}} つの mod がフィットしませんでした。選択した防具にエネルギーをアップグレードしても、この問題は解決されません。",
+      "UnassignedModsDesc_one": "エネルギー容量または mod スロットが不足しているため、1つの mod を適用できませんでした。選択している防具のエネルギーアップグレードでは、この問題は解決しません。",
+      "UnassignedModsDesc_other": "エネルギー容量またはMODスロットが不足しているため、 {{count}} つの mod がフィットしませんでした。選択した防具にエネルギーをアップグレードしても、この問題は解決されません。",
       "UnstackableMod": "スタック不可",
       "UpgradeCosts": "アップグレードコスト",
       "UpgradeCostsDesc": "一部のアーマーで適用する mod に対してエネルギーが不足しています。アップグレードに必要な合計コスト:"
@@ -861,12 +861,12 @@
     "PullFromPostmaster": "ポストマスターからアイテムを取得する",
     "PullFromPostmasterError": "ポストマスターから転送できません：{{error}}",
     "PullFromPostmasterGeneralError": "ポストマスターからすべてのアイテムを取得できません。",
-    "PullFromPostmasterNotification": "1つのポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_female": "1つのポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_female_plural": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_male": "1つのポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_male_plural": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_plural": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_female_one": "1つのポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_female_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_male_one": "1つのポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_male_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_one": "1つのポストマスターアイテムを{{store}} に引き出します。",
+    "PullFromPostmasterNotification_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
     "PullFromPostmasterPopupTitle": "ポストマスターから拾う",
     "Random": "ランダム",
     "Randomize": "ロードアウトのランダム化",
@@ -896,10 +896,10 @@
       "LoadoutOptimizer": "ロードアウト最適化の設定",
       "NativeShare": "リンクを共有する",
       "Notes": "メモ",
-      "NumItems": "{{count}} 個 - 受信者は在庫から同等のアイテムを選択するよう求められます",
-      "NumItems_plural": "{{count}} 個 - 受信者は在庫から同等のアイテムを選択するよう求められます",
-      "NumMods": "{{count}} 個のmod",
-      "NumMods_plural": "{{count}} 個のmod",
+      "NumItems_one": "{{count}} 個 - 受信者は在庫から同等のアイテムを選択するよう求められます",
+      "NumItems_other": "{{count}} 個 - 受信者は在庫から同等のアイテムを選択するよう求められます",
+      "NumMods_one": "{{count}} 個のmod",
+      "NumMods_other": "{{count}} 個のmod",
       "Placeholder": "共有リンクをロードしています",
       "Subclass": "サブクラスのカスタマイズ",
       "Summary": "以下を含むこのロードアウトをシェアする：",
@@ -1108,8 +1108,8 @@
     "PaleHeartPathfinder": "ペイルハートパスファインダー",
     "PercentMax": "最高まで{{pct}}%達成",
     "PercentPrestige": "リセットまで{{pct}}％達成",
-    "PointsUsed": "1ポイント使用中",
-    "PointsUsed_plural": "{{count}} ポイント使用中",
+    "PointsUsed_one": "1ポイント使用中",
+    "PointsUsed_other": "{{count}} ポイント使用中",
     "PowerBonusHeader": "+{{powerBonus}} パワーボーナス",
     "PowerBonusHeaderUndefined": "その他の報酬",
     "Progress": "進行状況",
@@ -1119,8 +1119,8 @@
     "Quests": "クエスト",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}pts",
-    "Resets": "1 リセット",
-    "Resets_plural": "{{count}} リセット",
+    "Resets_one": "1 リセット",
+    "Resets_other": "{{count}} リセット",
     "StatTrackers": "追跡中ステータス",
     "TrackedTriumphs": "追跡中の勝利の道のり",
     "VanguardPathfinder": "バンガードパスファインダー"
@@ -1217,8 +1217,8 @@
     "SortByWeaponElement": "ダメージタイプ",
     "SortCustom": "カスタムソート",
     "SortName": "名前",
-    "SpacesSize": "{{count}} スペース",
-    "SpacesSize_plural": "{{count}} スペース",
+    "SpacesSize_one": "{{count}} スペース",
+    "SpacesSize_other": "{{count}} スペース",
     "Theme": "テーマ",
     "VaultArmorGroupingStyle": "アーマーをクラスごとに水平線で区切る",
     "VaultGroupingNone": "無し",
@@ -1344,8 +1344,8 @@
     "UpdateInvalid": "DIM Syncにデータを保存できませんでした",
     "UpdateInvalidBody": "DIM Syncに送信されたデータは無効のため保存できませんでした。",
     "UpdateInvalidBodyLoadout": "ロードアウト \"{{name}}\" は無効のため保存できませんでした。 別サイトからのインポートに失敗した場合は、そのサイト管理者の方へ無効なデータであることをお知らせください。",
-    "UpdateQueueLength": "変更した {{count}} 個の項目は、サーバーへ再接続したときに保存されます。",
-    "UpdateQueueLength_plural": "変更した {{count}} 個の項目は、サーバーへ再接続したときに保存されます。",
+    "UpdateQueueLength_one": "変更した {{count}} 個の項目は、サーバーへ再接続したときに保存されます。",
+    "UpdateQueueLength_other": "変更した {{count}} 個の項目は、サーバーへ再接続したときに保存されます。",
     "Usage": "DIMは、このデバイスで利用可能な{{quota, humanBytes}}のうち{{usage, humanBytes}}を使用しています。使用中のデータには、Bungie.netからダウンロードしたDestinyのアイテムデータベースも含まれます。"
   },
   "StreamDeck": {
@@ -1481,8 +1481,8 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip": "このパークは、正確に希望の武器ロールと一致しています。",
-    "BestRatedTip_plural": "ウィッシュリストにある推奨ロールと完全一致しています。",
+    "BestRatedTip_one": "このパークは、正確に希望の武器ロールと一致しています。",
+    "BestRatedTip_other": "ウィッシュリストにある推奨ロールと完全一致しています。",
     "Clear": "ウィッシュリストをクリア",
     "CopiedLine": "ウィッシュリストのロールをクリップボードにコピーしました",
     "CopyLine": "選択中のパークをウィッシュリストのロールとしてコピー",
@@ -1504,8 +1504,8 @@
     "UpdateExternalSource": "ウィッシュリストに追加",
     "Voltron": "voltron (標準)",
     "WishListNotes": "ウィッシュリストのメモ:",
-    "WorstRatedTip": "ごみリストにある非推奨パークと完全一致しています。",
-    "WorstRatedTip_plural": "ごみリストにある非推奨パークと完全一致しています。"
+    "WorstRatedTip_one": "ごみリストにある非推奨パークと完全一致しています。",
+    "WorstRatedTip_other": "ごみリストにある非推奨パークと完全一致しています。"
   },
   "no-space": "空きスペースなし",
   "wrong-level": "レベル不正"
