--- a/src/locale/zhCHS.json
+++ b/src/locale/zhCHS.json
@@ -32,11 +32,11 @@
     "NoNotes": "无注释",
     "OpenInArmory": "查看武器详情",
     "Season": "年 {{year}}，第 {{season}} 赛季",
-    "TrashlistedRolls": "垃圾列表特性组合",
-    "TrashlistedRolls_plural": "{{count, number}} 个垃圾列表特性组合",
+    "TrashlistedRolls_one": "垃圾列表特性组合",
+    "TrashlistedRolls_other": "{{count, number}} 个垃圾列表特性组合",
     "Unknown": "未知物品",
-    "WishlistedRolls": "愿望清单特性组合",
-    "WishlistedRolls_plural": "{{count, number}} 个愿望清单特性组合",
+    "WishlistedRolls_one": "愿望清单特性组合",
+    "WishlistedRolls_other": "{{count, number}} 个愿望清单特性组合",
     "YourItems": "你的物品"
   },
   "Browsercheck": {
@@ -62,8 +62,8 @@
     "Confirm": "更新备注",
     "Remove": "从备注中删除 / 删除 #标签",
     "Replace": "替换备注",
-    "Title": "更改一个物品的备注",
-    "Title_plural": "更改 {{count}} 个物品的备注"
+    "Title_one": "更改一个物品的备注",
+    "Title_other": "更改 {{count}} 个物品的备注"
   },
   "BungieAlert": {
     "Title": "一则来自Bungie的信息:"
@@ -113,17 +113,17 @@
     "Super": "超能冷却：{{cooldown}}"
   },
   "Countdown": {
-    "Days": "1天",
-    "Days_compact": "{{count}}天",
-    "Days_compact_plural": "{{count}}天",
-    "Days_plural": "{{count}} 天"
+    "Days_compact_one": "{{count}}天",
+    "Days_compact_other": "{{count}}天",
+    "Days_one": "1天",
+    "Days_other": "{{count}} 天"
   },
   "Csv": {
     "EmptyFile": "文件中没有行",
     "ImportConfirm": "您确定要从CSV导入标签/笔记？这将覆盖您电子表格中所包含的所有项目/标记。",
     "ImportFailed": "从 CSV 导入标签/注释失败: {{error}}",
-    "ImportSuccess": "为一个物品加载的标签/注释。",
-    "ImportSuccess_plural": "为{{count}} 个物品加载的标签/注释。",
+    "ImportSuccess_one": "为一个物品加载的标签/注释。",
+    "ImportSuccess_other": "为{{count}} 个物品加载的标签/注释。",
     "ImportWrongFileType": "此文件不是一个CSV文件。",
     "WrongFields": "CSV文件中必须有'Id', 'Notes', 'Tag', 'Hash'列 (编号, 注释, 标签, 哈希)"
   },
@@ -149,18 +149,18 @@
     "Troubleshooting": "故障排除指南"
   },
   "FarmingMode": {
-    "D2Desc": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
-    "D2Desc_female": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
-    "D2Desc_female_plural": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
-    "D2Desc_male": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
-    "D2Desc_male_plural": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
-    "D2Desc_plural": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
-    "Desc": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
-    "Desc_female": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
-    "Desc_female_plural": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
-    "Desc_male": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
-    "Desc_male_plural": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
-    "Desc_plural": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
+    "D2Desc_female_one": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
+    "D2Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
+    "D2Desc_male_one": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
+    "D2Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
+    "D2Desc_one": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有空位。",
+    "D2Desc_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
+    "Desc_female_one": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
+    "Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
+    "Desc_male_one": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
+    "Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
+    "Desc_one": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有空位。",
+    "Desc_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "FarmingMode": "收集模式",
     "FarmingModeNote": "（为掉落物留出空间）",
     "MakeRoom": {
@@ -204,12 +204,12 @@
     "ArmorIntrinsic": "显示带有固有特性的传说护甲，例如诡计护甲。",
     "Ascended": "显示可提升光等且已提升的物品。",
     "Breaker": "根据反勇士类型或对应的勇士类型过滤。使用 breaker:instrinsic 搜索具有内置反勇士能力的装备。",
-    "BulkClear": "移除物品标签",
-    "BulkClear_plural": "移除 {{count}} 件物品标签",
-    "BulkRevert": "恢复物品标签",
-    "BulkRevert_plural": "恢复 {{count}} 件物品标签",
-    "BulkTag": "将选择物品标记为 {{tag}}.",
-    "BulkTag_plural": "将 {{count}} 件选择物品标记为 {{tag}}.",
+    "BulkClear_one": "移除物品标签",
+    "BulkClear_other": "移除 {{count}} 件物品标签",
+    "BulkRevert_one": "恢复物品标签",
+    "BulkRevert_other": "恢复 {{count}} 件物品标签",
+    "BulkTag_one": "将选择物品标记为 {{tag}}.",
+    "BulkTag_other": "将 {{count}} 件选择物品标记为 {{tag}}.",
     "Catalyst": "按状态显示催化。catalyst:complete 显示你已解锁并应用的催化，catalyst:incomplete 显示你已解锁但尚未完成目标且应用的催化，而 catalyst:missing 显示你尚未解锁催化的物品。",
     "Class": "按照职业类别显示.",
     "Combine": "可以用括号来组合过滤器，或用“or”和“and”来进一步筛选你的搜索，例如“{{example}}”。",
@@ -379,8 +379,8 @@
     "FilterHelpOptimizer": "选择用于配装的护甲: {{example}}",
     "FilterHelpProgress": "搜索里程碑和悬赏",
     "FilterHelpRecords": "搜索成就和收藏品",
-    "FilterMatchCount": "1个物品",
-    "FilterMatchCount_plural": "{{count}} 个物品",
+    "FilterMatchCount_one": "1个物品",
+    "FilterMatchCount_other": "{{count}} 个物品",
     "Filters": "过滤器",
     "InstallDIM": "安装为 App",
     "InstallDIMBanner": "将 DIM 安装为主屏幕上的 App",
@@ -799,8 +799,8 @@
     "InGameLoadouts": "游戏内配装",
     "IncludeRuntimeStatBenefits": "包括洗礼属性加成",
     "IncludeRuntimeStatBenefitsDesc": "属性洗礼护甲模组会在你拥有护甲充能时提供固定的属性增益。\n在该设置下，DIM 将视此类模组为生效状态，并将其增益用于配装属性的计算和优化。",
-    "ItemErrorSummary": "1 个物品出错：",
-    "ItemErrorSummary_plural": "{{count}} 个物品出错：",
+    "ItemErrorSummary_one": "1 个物品出错：",
+    "ItemErrorSummary_other": "{{count}} 个物品出错：",
     "ItemLeveling": "物品等级",
     "LoadoutName": "配装名称",
     "LoadoutParameters": "配装优化器设置",
@@ -809,12 +809,12 @@
     "LoadoutParametersStats": "属性优先级和最低/最高属性阶级",
     "Loadouts": "配装",
     "MakeRoom": "为邮政官腾出空间",
-    "MakeRoomDone": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
-    "MakeRoomDone_female": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
-    "MakeRoomDone_female_plural": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
-    "MakeRoomDone_male": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
-    "MakeRoomDone_male_plural": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
-    "MakeRoomDone_plural": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
+    "MakeRoomDone_female_one": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
+    "MakeRoomDone_female_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
+    "MakeRoomDone_male_one": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
+    "MakeRoomDone_male_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
+    "MakeRoomDone_one": "通过从{{store}} 上移动了一项物品，成功为邮政官腾出了1个物品空间。",
+    "MakeRoomDone_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomError": "无法为邮政官腾出物品空间:{{error}}.",
     "ManageLoadouts": "管理配装",
     "MaxSlots": "一个配装里最多只能有 {{slots}} 个{{bucketName}}。",
@@ -822,17 +822,17 @@
     "MaximizePower": "最大能量等级",
     "MaximizeStat": "最高属性",
     "MissingItemsWarning": "此配装里的一些物品不在库存里了。",
-    "ModErrorSummary": "1 个模组出错：",
-    "ModErrorSummary_plural": "{{count}} 个模组出错：",
+    "ModErrorSummary_one": "1 个模组出错：",
+    "ModErrorSummary_other": "{{count}} 个模组出错：",
     "ModPlacement": {
       "InvalidMods": "无效模组",
-      "InvalidModsDesc": "有 1 个模组不能安装到任何护甲上。",
-      "InvalidModsDesc_plural": "有 {{count}} 个模组不能安装到任何护甲上。",
+      "InvalidModsDesc_one": "有 1 个模组不能安装到任何护甲上。",
+      "InvalidModsDesc_other": "有 {{count}} 个模组不能安装到任何护甲上。",
       "ModPlacement": "模组位置",
       "StackableMod": "可叠加",
       "UnassignedMods": "未分配的模组",
-      "UnassignedModsDesc": "由于能量容量或模组插槽不足，一个模组无法安装。即便为所选护甲升级能量也无法修正此问题。",
-      "UnassignedModsDesc_plural": "由于能量容量或模组插槽不足，{{count}} 个模组无法安装。即便为所选护甲升级能量也是如此。",
+      "UnassignedModsDesc_one": "由于能量容量或模组插槽不足，一个模组无法安装。即便为所选护甲升级能量也无法修正此问题。",
+      "UnassignedModsDesc_other": "由于能量容量或模组插槽不足，{{count}} 个模组无法安装。即便为所选护甲升级能量也是如此。",
       "UnstackableMod": "不可叠加",
       "UpgradeCosts": "升级消耗成本",
       "UpgradeCostsDesc": "有些护甲需要能量容量升级才能装下所选的模组。升级总共会花费："
@@ -861,12 +861,12 @@
     "PullFromPostmaster": "从邮政官处取回物品",
     "PullFromPostmasterError": "无法从邮政官处取回物品:{{error}}.",
     "PullFromPostmasterGeneralError": "无法从邮政官拉取所有物品。",
-    "PullFromPostmasterNotification": "正在从邮政官处取回1项物品至{{store}}.",
-    "PullFromPostmasterNotification_female": "正在从邮政官处取回1项物品至{{store}}.",
-    "PullFromPostmasterNotification_female_plural": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
-    "PullFromPostmasterNotification_male": "正在从邮政官处取回1项物品至{{store}}.",
-    "PullFromPostmasterNotification_male_plural": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
-    "PullFromPostmasterNotification_plural": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
+    "PullFromPostmasterNotification_female_one": "正在从邮政官处取回1项物品至{{store}}.",
+    "PullFromPostmasterNotification_female_other": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
+    "PullFromPostmasterNotification_male_one": "正在从邮政官处取回1项物品至{{store}}.",
+    "PullFromPostmasterNotification_male_other": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
+    "PullFromPostmasterNotification_one": "正在从邮政官处取回1项物品至{{store}}.",
+    "PullFromPostmasterNotification_other": "正在从邮政官处取回{{count}} 项物品至{{store}}.",
     "PullFromPostmasterPopupTitle": "从邮政官处取回物品",
     "Random": "随机",
     "Randomize": "随机配装",
@@ -896,10 +896,10 @@
       "LoadoutOptimizer": "配装优化器设置",
       "NativeShare": "分享链接",
       "Notes": "备注",
-      "NumItems": "{{count}} 个物品 - 被分享者需要从他们的库存中选择 1 件替代物品",
-      "NumItems_plural": "{{count}} 个物品 - 被分享者需要从他们的库存中选择替代物品",
-      "NumMods": "{{count}} 个模组",
-      "NumMods_plural": "{{count}} 个模组",
+      "NumItems_one": "{{count}} 个物品 - 被分享者需要从他们的库存中选择 1 件替代物品",
+      "NumItems_other": "{{count}} 个物品 - 被分享者需要从他们的库存中选择替代物品",
+      "NumMods_one": "{{count}} 个模组",
+      "NumMods_other": "{{count}} 个模组",
       "Placeholder": "正在加载分享链接",
       "Subclass": "自定义子职业",
       "Summary": "分享包含如下内容的配装：",
@@ -1108,8 +1108,8 @@
     "PaleHeartPathfinder": "苍白之心寻路者",
     "PercentMax": "{{pct}}% 最大值",
     "PercentPrestige": "重置百分比{{pct}}%",
-    "PointsUsed": "已用 1 点",
-    "PointsUsed_plural": "已用 {{count}} 点",
+    "PointsUsed_one": "已用 1 点",
+    "PointsUsed_other": "已用 {{count}} 点",
     "PowerBonusHeader": "+{{powerBonus}} 光等奖励",
     "PowerBonusHeaderUndefined": "其他奖励",
     "Progress": "进度",
@@ -1119,8 +1119,8 @@
     "Quests": "任务",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}点",
-    "Resets": "1次重置",
-    "Resets_plural": "{{count}} 次重置",
+    "Resets_one": "1次重置",
+    "Resets_other": "{{count}} 次重置",
     "StatTrackers": "数据追踪器",
     "TrackedTriumphs": "跟踪的成就",
     "VanguardPathfinder": "先锋寻路者"
@@ -1217,8 +1217,8 @@
     "SortByWeaponElement": "伤害类型",
     "SortCustom": "自订排序",
     "SortName": "名称",
-    "SpacesSize": "{{count}} 个空位",
-    "SpacesSize_plural": "{{count}} 个空位",
+    "SpacesSize_one": "{{count}} 个空位",
+    "SpacesSize_other": "{{count}} 个空位",
     "Theme": "主题",
     "VaultArmorGroupingStyle": "将不同职业护甲隔行分开",
     "VaultGroupingNone": "无",
@@ -1344,8 +1344,8 @@
     "UpdateInvalid": "未能将数据保存到 DIM 同步",
     "UpdateInvalidBody": "发送至 DIM 同步的数据无效，未被保存。",
     "UpdateInvalidBodyLoadout": "配装 \"{{name}}\" 无效，未被保存。若您从其他网站导入了此配装，请告知发布者其配装无效。",
-    "UpdateQueueLength": "我们将在能重新连接时保存 {{count}} 个新更改。",
-    "UpdateQueueLength_plural": "我们将在能重新连接时保存 {{count}} 个新更改。",
+    "UpdateQueueLength_one": "我们将在能重新连接时保存 {{count}} 个新更改。",
+    "UpdateQueueLength_other": "我们将在能重新连接时保存 {{count}} 个新更改。",
     "Usage": "DIM 使用了此设备{{quota, humanBytes}}可用空间中的{{usage, humanBytes}}.这包括从 bungie. net 下载的命运2物品资料库。"
   },
   "StreamDeck": {
@@ -1481,8 +1481,8 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip": "这个特性与您愿望清单上的某个武器完全匹配。",
-    "BestRatedTip_plural": "这些特性与您愿望清单上的某个武器完全匹配。",
+    "BestRatedTip_one": "这个特性与您愿望清单上的某个武器完全匹配。",
+    "BestRatedTip_other": "这些特性与您愿望清单上的某个武器完全匹配。",
     "Clear": "清除愿望清单",
     "CopiedLine": "已复制愿望清单特性组合到剪贴板",
     "CopyLine": "复制选定的特性为愿望清单特性组合",
@@ -1504,8 +1504,8 @@
     "UpdateExternalSource": "添加愿望清单",
     "Voltron": "voltron（默认）",
     "WishListNotes": "愿望清单备注：",
-    "WorstRatedTip": "这个特性与您垃圾清单上的某个武器完全匹配。",
-    "WorstRatedTip_plural": "这些特性与您垃圾清单上的某个武器完全匹配。"
+    "WorstRatedTip_one": "这个特性与您垃圾清单上的某个武器完全匹配。",
+    "WorstRatedTip_other": "这些特性与您垃圾清单上的某个武器完全匹配。"
   },
   "no-space": "空间不足",
   "wrong-level": "等级错误"
