--- a/src/locale/zhCHT.json
+++ b/src/locale/zhCHT.json
@@ -32,11 +32,11 @@
     "NoNotes": "無注釋",
     "OpenInArmory": "查看武器詳情",
     "Season": "年 {{year}}，第 {{season}} 賽季",
-    "TrashlistedRolls": "垃圾列表特性組合",
-    "TrashlistedRolls_plural": "{{count, number}} 個垃圾列表特性組合",
+    "TrashlistedRolls_one": "垃圾列表特性組合",
+    "TrashlistedRolls_other": "{{count, number}} 個垃圾列表特性組合",
     "Unknown": "未知物品",
-    "WishlistedRolls": "願望清單特性組合",
-    "WishlistedRolls_plural": "{{count, number}} 個願望清單特性組合",
+    "WishlistedRolls_one": "願望清單特性組合",
+    "WishlistedRolls_other": "{{count, number}} 個願望清單特性組合",
     "YourItems": "你的物品"
   },
   "Browsercheck": {
@@ -62,8 +62,8 @@
     "Confirm": "更新説明",
     "Remove": "從備注中移除 / 移除 #標簽",
     "Replace": "替換備注",
-    "Title": "更改一個物品的備注",
-    "Title_plural": "更改 {{count}} 個物品的備注"
+    "Title_one": "更改一個物品的備注",
+    "Title_other": "更改 {{count}} 個物品的備注"
   },
   "BungieAlert": {
     "Title": "一則來自Bungie的資訊:"
@@ -113,17 +113,17 @@
     "Super": "超能冷卻：{{cooldown}}"
   },
   "Countdown": {
-    "Days": "1天",
-    "Days_compact": "{{count}}天",
-    "Days_compact_plural": "{{count}}天",
-    "Days_plural": "{{count}} 天"
+    "Days_compact_one": "{{count}}天",
+    "Days_compact_other": "{{count}}天",
+    "Days_one": "1天",
+    "Days_other": "{{count}} 天"
   },
   "Csv": {
     "EmptyFile": "檔案中沒有行",
     "ImportConfirm": "您確定要從CSV導入標籤/筆記？這將覆蓋您試算表中所包含的所有項目/標記。",
     "ImportFailed": "從CSV導入標籤/注釋失敗：{{error}}",
-    "ImportSuccess": "為一個物品加載的標籤/注釋。",
-    "ImportSuccess_plural": "為{{count}} 個物品加載的標籤/注釋。",
+    "ImportSuccess_one": "為一個物品加載的標籤/注釋。",
+    "ImportSuccess_other": "為{{count}} 個物品加載的標籤/注釋。",
     "ImportWrongFileType": "此檔案不是一個CSV檔案。",
     "WrongFields": "CSV檔案中必須有'Id'，'Notes'，'Tag'，'Hash'列（編號，注釋，標籤，雜湊）"
   },
@@ -149,18 +149,18 @@
     "Troubleshooting": "故障排除指南"
   },
   "FarmingMode": {
-    "D2Desc": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
-    "D2Desc_female": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
-    "D2Desc_female_plural": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
-    "D2Desc_male": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
-    "D2Desc_male_plural": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
-    "D2Desc_plural": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
-    "Desc": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
-    "Desc_female": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
-    "Desc_female_plural": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
-    "Desc_male": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
-    "Desc_male_plural": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
-    "Desc_plural": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
+    "D2Desc_female_one": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
+    "D2Desc_female_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
+    "D2Desc_male_one": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
+    "D2Desc_male_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
+    "D2Desc_one": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有空位。",
+    "D2Desc_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
+    "Desc_female_one": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
+    "Desc_female_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
+    "Desc_male_one": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
+    "Desc_male_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
+    "Desc_one": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有空位。",
+    "Desc_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
     "FarmingMode": "收集模式",
     "FarmingModeNote": "(為掉落物留出空間)",
     "MakeRoom": {
@@ -204,12 +204,12 @@
     "ArmorIntrinsic": "顯示帶有固有特性的傳説防具，例如詭計護甲。",
     "Ascended": "顯示可提升光等且已提升的物品。",
     "Breaker": "Filter by breaker type or corresponding champion type. breaker:instrinsic shows items with intrinsic breaker ability.",
-    "BulkClear": "移除物品標籤",
-    "BulkClear_plural": "移除 {{count}} 物品標籤",
-    "BulkRevert": "恢復物品標籤",
-    "BulkRevert_plural": "恢復 {{count}} 件物品標籤",
-    "BulkTag": "將選擇物品標記為 {{tag}}.",
-    "BulkTag_plural": "將 {{count}} 件選擇物品標記為 {{tag}}.",
+    "BulkClear_one": "移除物品標籤",
+    "BulkClear_other": "移除 {{count}} 物品標籤",
+    "BulkRevert_one": "恢復物品標籤",
+    "BulkRevert_other": "恢復 {{count}} 件物品標籤",
+    "BulkTag_one": "將選擇物品標記為 {{tag}}.",
+    "BulkTag_other": "將 {{count}} 件選擇物品標記為 {{tag}}.",
     "Catalyst": "按狀態顯示催化。catalyst:complete 顯示已解鎖并已套用的催化， catalyst:incomplete 顯示已解鎖但尚未完成目標或套用的催化，而 catalyst:missing 顯示你尚未解鎖催化的物品。",
     "Class": "按照職業類別顯示.",
     "Combine": "可以用括號來組合過濾器，或用「or」和「and」來進一步篩選你的搜索，例如「{{example}}」。",
@@ -379,8 +379,8 @@
     "FilterHelpOptimizer": "搜索防具：{{example}}",
     "FilterHelpProgress": "搜索里程碑和懸賞",
     "FilterHelpRecords": "搜索成就和收藏品",
-    "FilterMatchCount": "1個物品",
-    "FilterMatchCount_plural": "{{count}} 個物品",
+    "FilterMatchCount_one": "1個物品",
+    "FilterMatchCount_other": "{{count}} 個物品",
     "Filters": "篩檢程式",
     "InstallDIM": "安裝為 App",
     "InstallDIMBanner": "將 DIM 安裝為主屏幕上的 App",
@@ -799,8 +799,8 @@
     "InGameLoadouts": "游戲内配裝",
     "IncludeRuntimeStatBenefits": "Include Font mod stats",
     "IncludeRuntimeStatBenefitsDesc": "\"Font of ...\" armor mods provide a flat boost to character stats while you have Armor Charges.\n\nWith this setting, DIM considers these mods active and adds their benefits to this Loadout's stats in calculations and optimizations.",
-    "ItemErrorSummary": "1 個物品出錯：",
-    "ItemErrorSummary_plural": "{{count}} 個物品出錯：",
+    "ItemErrorSummary_one": "1 個物品出錯：",
+    "ItemErrorSummary_other": "{{count}} 個物品出錯：",
     "ItemLeveling": "物品等級",
     "LoadoutName": "配裝名稱",
     "LoadoutParameters": "配裝優化器設置",
@@ -809,12 +809,12 @@
     "LoadoutParametersStats": "屬性優先級和最大/最小屬性等級",
     "Loadouts": "配裝",
     "MakeRoom": "為郵政官騰出空間",
-    "MakeRoomDone": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
-    "MakeRoomDone_female": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
-    "MakeRoomDone_female_plural": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
-    "MakeRoomDone_male": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
-    "MakeRoomDone_male_plural": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
-    "MakeRoomDone_plural": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
+    "MakeRoomDone_female_one": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
+    "MakeRoomDone_female_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
+    "MakeRoomDone_male_one": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
+    "MakeRoomDone_male_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
+    "MakeRoomDone_one": "通過從{{store}} 上移動了一項物品，成功為郵政官騰出了1個物品空間。",
+    "MakeRoomDone_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
     "MakeRoomError": "無法為郵政官騰出物品空間:{{error}}.",
     "ManageLoadouts": "管理配裝",
     "MaxSlots": "一個配裝中只能有 {{slots}} 個 {{bucketName}}",
@@ -822,17 +822,17 @@
     "MaximizePower": "最大能量等級",
     "MaximizeStat": "最高屬性",
     "MissingItemsWarning": "此配裝中的某些項目不再在您的庫存中。",
-    "ModErrorSummary": "1 個模組出錯：",
-    "ModErrorSummary_plural": "{{count}} 個模組出錯：",
+    "ModErrorSummary_one": "1 個模組出錯：",
+    "ModErrorSummary_other": "{{count}} 個模組出錯：",
     "ModPlacement": {
       "InvalidMods": "無效模組",
-      "InvalidModsDesc": "1 個模組不能插入任何防具。",
-      "InvalidModsDesc_plural": "{{count}} 個模組不能插入任何防具。",
+      "InvalidModsDesc_one": "1 個模組不能插入任何防具。",
+      "InvalidModsDesc_other": "{{count}} 個模組不能插入任何防具。",
       "ModPlacement": "模組位置",
       "StackableMod": "Stackable",
       "UnassignedMods": "未分配的模組",
-      "UnassignedModsDesc": "由於容量或插槽不足，1 個模組無法安裝。即使為所選護甲升級容量也是如此。",
-      "UnassignedModsDesc_plural": "由於容量或插槽不足，{{count}} 個模組無法安裝。即使為所選護甲升級容量也是如此。",
+      "UnassignedModsDesc_one": "由於容量或插槽不足，1 個模組無法安裝。即使為所選護甲升級容量也是如此。",
+      "UnassignedModsDesc_other": "由於容量或插槽不足，{{count}} 個模組無法安裝。即使為所選護甲升級容量也是如此。",
       "UnstackableMod": "Not Stackable",
       "UpgradeCosts": "升級消耗",
       "UpgradeCostsDesc": "部分防具需要能量容量升級才能裝下所選模組。升級總共會花費："
@@ -861,12 +861,12 @@
     "PullFromPostmaster": "從郵政官處取回物品",
     "PullFromPostmasterError": "無法從郵政官處取回物品:{{error}}.",
     "PullFromPostmasterGeneralError": "無法從郵政官拉取所有物品。",
-    "PullFromPostmasterNotification": "正在從郵政官處取回1項物品至{{store}}.",
-    "PullFromPostmasterNotification_female": "正在從郵政官處取回1項物品至{{store}}.",
-    "PullFromPostmasterNotification_female_plural": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
-    "PullFromPostmasterNotification_male": "正在從郵政官處取回1項物品至{{store}}.",
-    "PullFromPostmasterNotification_male_plural": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
-    "PullFromPostmasterNotification_plural": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
+    "PullFromPostmasterNotification_female_one": "正在從郵政官處取回1項物品至{{store}}.",
+    "PullFromPostmasterNotification_female_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
+    "PullFromPostmasterNotification_male_one": "正在從郵政官處取回1項物品至{{store}}.",
+    "PullFromPostmasterNotification_male_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
+    "PullFromPostmasterNotification_one": "正在從郵政官處取回1項物品至{{store}}.",
+    "PullFromPostmasterNotification_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
     "PullFromPostmasterPopupTitle": "從郵政官處取回物品",
     "Random": "隨機",
     "Randomize": "隨機配装",
@@ -896,10 +896,10 @@
       "LoadoutOptimizer": "配裝優化器設置",
       "NativeShare": "分享連結",
       "Notes": "備注",
-      "NumItems": "{{count}} 個項目 - 將提示被分享者從他們的庫存中選擇一個可比較的項目",
-      "NumItems_plural": "{{count}} 個項目 - 將提示被分享者從他們的庫存中選擇可比較的項目",
-      "NumMods": "{{count}} 個模組",
-      "NumMods_plural": "{{count}} 個模組",
+      "NumItems_one": "{{count}} 個項目 - 將提示被分享者從他們的庫存中選擇一個可比較的項目",
+      "NumItems_other": "{{count}} 個項目 - 將提示被分享者從他們的庫存中選擇可比較的項目",
+      "NumMods_one": "{{count}} 個模組",
+      "NumMods_other": "{{count}} 個模組",
       "Placeholder": "正在載入分享連結",
       "Subclass": "自定義子職業",
       "Summary": "分享包含如下内容的配裝：",
@@ -1108,8 +1108,8 @@
     "PaleHeartPathfinder": "Pale Heart Pathfinder",
     "PercentMax": "{{pct}}% to maximum",
     "PercentPrestige": "重置百分比{{pct}}%",
-    "PointsUsed": "1 point used",
-    "PointsUsed_plural": "{{count}} points used",
+    "PointsUsed_one": "1 point used",
+    "PointsUsed_other": "{{count}} points used",
     "PowerBonusHeader": "+{{powerBonus}} 光等獎勵",
     "PowerBonusHeaderUndefined": "其他獎勵",
     "Progress": "進度",
@@ -1119,8 +1119,8 @@
     "Quests": "任務",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}點",
-    "Resets": "1次重置",
-    "Resets_plural": "{{count}} 次重置",
+    "Resets_one": "1次重置",
+    "Resets_other": "{{count}} 次重置",
     "StatTrackers": "數據追蹤器",
     "TrackedTriumphs": "跟蹤的成就",
     "VanguardPathfinder": "Vanguard Pathfinder"
@@ -1217,8 +1217,8 @@
     "SortByWeaponElement": "傷害類型",
     "SortCustom": "自訂排序",
     "SortName": "名稱",
-    "SpacesSize": "{{count}} 個空位",
-    "SpacesSize_plural": "{{count}} 個空位",
+    "SpacesSize_one": "{{count}} 個空位",
+    "SpacesSize_other": "{{count}} 個空位",
     "Theme": "主題",
     "VaultArmorGroupingStyle": "Separate armor on different lines by class",
     "VaultGroupingNone": "None",
@@ -1344,8 +1344,8 @@
     "UpdateInvalid": "Failed to save data to DIM Sync",
     "UpdateInvalidBody": "Data sent to DIM Sync was invalid and will not be saved.",
     "UpdateInvalidBodyLoadout": "The loadout \"{{name}}\" is invalid and will not be saved. If you imported it from another site, please let them know that they are exporting invalid loadouts.",
-    "UpdateQueueLength": "我們將在能重新連接時保存 {{count}} 個新更改。",
-    "UpdateQueueLength_plural": "我們將在能重新連接時保存 {{count}} 個新更改。",
+    "UpdateQueueLength_one": "我們將在能重新連接時保存 {{count}} 個新更改。",
+    "UpdateQueueLength_other": "我們將在能重新連接時保存 {{count}} 個新更改。",
     "Usage": "DIM 使用了此設備{{quota, humanBytes}}可用空間中的{{usage, humanBytes}}.這包括從 bungie. net 下載的命運2物品資料庫。"
   },
   "StreamDeck": {
@@ -1481,8 +1481,8 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip": "這個特性與您願望清單上的某個武器完全匹配。",
-    "BestRatedTip_plural": "這些特性與您願望清單上的某個武器完全匹配。",
+    "BestRatedTip_one": "這個特性與您願望清單上的某個武器完全匹配。",
+    "BestRatedTip_other": "這些特性與您願望清單上的某個武器完全匹配。",
     "Clear": "清除愿望清单",
     "CopiedLine": "已複製願望清單特性組合到剪貼板",
     "CopyLine": "複製選定的特性為願望清單特性組合",
@@ -1504,8 +1504,8 @@
     "UpdateExternalSource": "Add Wish List",
     "Voltron": "voltron（默認）",
     "WishListNotes": "願望清單備註：",
-    "WorstRatedTip": "這個特性與您願望清單上的某個武器完全匹配。",
-    "WorstRatedTip_plural": "這些特性與您垃圾清單上的某個武器完全匹配。"
+    "WorstRatedTip_one": "這個特性與您願望清單上的某個武器完全匹配。",
+    "WorstRatedTip_other": "這些特性與您垃圾清單上的某個武器完全匹配。"
   },
   "no-space": "空間不足",
   "wrong-level": "等級錯誤"
